# claude-code-games

./: .gitignore  CLAUDE.md  README.md  ielts.html  shooter.html  tictactoe.html
.claude/agents/: backend-dev.md  feature-adder.md  frontend-dev.md  game-tester.md  level-designer.md  qa.md
docs/: agent-teams-patterns.md  agent-teams-reference.md
quant-backtest/: .gitignore  .pre-commit-config.yaml  Makefile  engine_config.py  pyproject.toml
quant-backtest/_legacy/: __init__.py  config_ma.py  fetcher_yf.py
quant-backtest/archive/: __init__.py
quant-backtest/backtest/: __init__.py
quant-backtest/crucible/: __init__.py
quant-backtest/data/: __init__.py
quant-backtest/environment/: __init__.py
quant-backtest/fitness/: __init__.py
quant-backtest/ga/: __init__.py
quant-backtest/genome/: __init__.py
quant-backtest/season/: __init__.py
quant-backtest/strategy/: __init__.py
quant-backtest/tests/: __init__.py
quant-backtest/tests/integration/: __init__.py
quant-backtest/tests/property/: __init__.py
quant-backtest/tests/unit/: __init__.py
quant-backtest/ui/: __init__.py
src/: index.html  server.js  styles.css
tests/: test-plan.md
